--- a/index.html
+++ b/index.html
@@ -1,17 +1,104 @@
-<html>
-    <head>
-        <title>
-          Latihan User Interface    
-        </title>
-    </head>
-    <body>
-        <h1>Nama : Shalfa Amelia</h1>
-        <h1>NIM  : 233307090</h1>
-        <h3>Pilih Jenis Kelamin</h3>
-    <form>
-        <input type="radio" name="gender" value="laki-laki"> Laki-Laki<br>
-        <input type="radio" name="gender" value="perempuan"> Perempuan<br>
-        <input type="submit" value="SIMPAN">
-    </form>
-    </body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Shalfa Amelia Profile</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+          rel="stylesheet" 
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/style/app.css">
+    <link rel="stylesheet" 
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
+          integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" 
+          crossorigin="anonymous" 
+          referrerpolicy="no-referrer">
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-danger-subtle fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">SA</a>
+          <button class="navbar-toggler" 
+                  type="button" 
+                  data-bs-toggle="collapse" 
+                  data-bs-target="#navbarSupportedContent" 
+                  aria-controls="navbarSupportedContent" 
+                  aria-expanded="false" 
+                  aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" 
+               id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#aboutme">About Me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <section>
+        <div class="container">
+            <div class="profile">
+            <img 
+            class="rounded-circle profileImage" 
+            src="assets/image/Cokelat Estetis Facebook Foto Profil.png" 
+            alt="">
+            <h1>SHALFA AMELIA</h1>
+            <h4>Hi, this is my official website to show all details and work experience of me!</h4>
+            <h5>Hope You Enjoy!</h5>
+        </div>
+        </div>
+      </section>
+      <section id="aboutme" class="aboutMe">
+        <h1 style="color: antiquewhite;" class="text-center">About Me</h1>
+        <div class="container">
+            <div class="row">
+              <div class="text-center" style="color: white;">
+                <h3 class="text-center" style="color:rgb(160, 84, 84);">Biodata Diri</h3>
+                Halo, perkenalkan aku Shalfa Amelia, biasa disapa Amel. Aku adalah mahasiswi Politeknik Negeri Madiun 
+                program studi D3-Teknologi Informasi. Aku berada di kelas 2C dengan NPM 233307090. Aku lahir di 
+                Madiun, 2 November 2004. Alamat rumahku ada di Ds. Bajulan, Kec. Saradan, Kab. Madiun. 
+              </div>
+              <div class="text-center" style="color: white;"> 
+                <h3 class="text-center" style="color: rgb(160, 84, 84);">Pendidikan</h3>
+                    TK  : Kartika VIII-21   (2009-2011)
+                <br>SD  : SDN Bangunsari 02 (2011-2017)
+                <br>SMP : SMPN 1 Mejayan    (2017-2020)
+                <br>SMA : SMAN 1 Mejayan    (2020-2023)
+              </div>
+              <div class="text-center" style="color: white;">
+                <h3 style="color:rgb(160, 84, 84);" class="text-center">Hobi</h3>
+                Aku suka berkeliling dengan bersepeda ataupun naik motor, lalu mencari kuliner yang enak dan nikmat 
+                yang membuat mood seketika membuncah menjadi lebih baik. Menyanyi adalah hal sederhana yang juga 
+                bisa membuat badan menjadi lebih fresh. Disamping beberapa hal tersebut, aku juga suka mencoba hal baru  
+                yang mungkin saja bisa menjadi hobi yang menarik.
+              </div>
+            </div>
+          </div>
+      </section>
+      <section id="contact" class="contact">
+        <div class="container">
+            <h1 class="text-center" style="color: antiquewhite;">Contact</h1>
+            <div class="container text-center">
+              <h5 class="text-center" style="color: white;">email : shalfaamelia@gmail.com</h5>
+              <a href="https://www.instagram.com/shalfamelia?igsh=MXdjMWJsdjF3N2YyYw=="><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://wa.me/+6281328606260"><i class="fa-brands fa-whatsapp"></i></a>
+              <a href="www.linkedin.com/in/shalfa-amelia-16a2252a4"><i class="fa-brands fa-linkedin"></i></a>
+            </div> 
+        </div>
+      </section>
+      <script 
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+      crossorigin="anonymous">
+     </script>
+  </body>
 </html>
